--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -42,12 +42,13 @@
     </header>
 
     <script>
-        <% 
+        `<% 
         const navbar = document.getElementById('navbar');
          const navBtn = document.querySelector('.nav-btn');
          
          navBtn.addEventListener('click', () => {
            navbar.classList.toggle('responsive_nav');
-         }); %>
+         }); %>`
     </script>
-</body
+</body>
+</html>
