--- a/public/estilo.css
+++ b/public/estilo.css
@@ -2,6 +2,14 @@
     margin: 0;
     padding: 0;
 }
+body {
+  margin: 0;
+  min-height: 200vh;
+  font-size: 0;
+  font-family: Helvetica, Verdana, sans-serif;
+  background-image: url(/assets/download\ \(1\).jpg); 
+  background-size: 100%;
+}
 
 /* login */
 .container-center{
@@ -92,269 +100,86 @@
   }
 
   /* Header */
-  .header {
+  nav {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    z-index: 1;
-  }
-  
-    header > div {
-      background-color: #645a37;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
+    padding: 16px 20px 30px 20px;
+    display: flex;
+    align-items: center;
+    transition: 0.3s ease-out;
+    backdrop-filter: blur(8px) brightness(1.2);
+    -webkit-backdrop-filter: blur(8px) brightness(1.2);
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+    color: white;
+    font-size: 16px;
+    &.mask {
+      top: 150px;
+      mask-image: linear-gradient(black 70%, transparent);
+      -webkit-mask-image: linear-gradient(black 70%, transparent);
+    }
+    &.mask-pattern {
+      top: 300px;
+      mask-image: url("data:image/svg+xml, %3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 12.21 10.57%27%3E%3Cpath fill=%27%23ffffff%27 d=%27M6.1 0h6.11L9.16 5.29 6.1 10.57 3.05 5.29 0 0h6.1z%27/%3E%3C/svg%3E"), linear-gradient(black calc(100% - 30px), transparent calc(100% - 30px));
+      mask-size: auto 30px, 100% 100%;
+      mask-repeat: repeat-x, no-repeat;
+      mask-position: left bottom, top left;
+      
+      -webkit-mask-image: url("data:image/svg+xml, %3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 12.21 10.57%27%3E%3Cpath fill=%27%23ffffff%27 d=%27M6.1 0h6.11L9.16 5.29 6.1 10.57 3.05 5.29 0 0h6.1z%27/%3E%3C/svg%3E"), linear-gradient(black calc(100% - 30px), transparent calc(100% - 30px));
+      -webkit-mask-size: auto 30px, 100% 100%;
+      -webkit-mask-repeat: repeat-x, no-repeat;
+      -webkit-mask-position: left bottom, top left;
     }
   
-    .logo{
-      width: 150px;
-      position: relative;
+    @media (min-width: 640px) {
+      padding: 16px 50px 30px 50px;
+    }
   }
-  .logo img{
-      width: 100%;
+  nav.is-hidden {
+    transform: translateY(-100%);
   }
-  header nav ul{
-    text-align: center;
+  .list {
+    justify-content: center;
+    align-items: center;
     list-style-type: none;
+    margin-left: auto;
+    display: none;
+    @media (min-width: 640px) {
+      display: flex;
+    }
+    li {
+      margin-left: 20px;
+    }
   }
-  header nav ul li:visited{
-    text-decoration: none;
-  }
-  
-  header nav ul li:active {
-    text-decoration: none;
-  }
-  
-  header ul li {
+
+  .menu {
     display: inline-block;
-    padding: 0 40px;
-    font-size: 15px;
+    padding: 0;
+    font-size: 0;
+    background: none;
+    border:  none;
+    margin-left: 20px;
+    filter: drop-shadow(0 0 5px rgba(0,0,0,.5));
+    &::before {
+      content: url("data:image/svg+xml, %3Csvg%20xmlns=%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox=%270%200%2024.8%2018.92%27%20width=%2724.8%27%20height=%2718.92%27%3E%3Cpath%20d=%27M23.8,9.46H1m22.8,8.46H1M23.8,1H1%27%20fill=%27none%27%20stroke=%27%23fff%27%20stroke-linecap=%27round%27%20stroke-width=%272%27%2F%3E%3C%2Fsvg%3E")
+    }
+    @media (min-width: 640px) {
+      display: none;
+    }
   }
-  
-  header a{
-    color: #EEE1B3;
-    text-decoration: none;
-    display: inline-block;
-    transition: .2s;
-  }
-  header nav ul li a:visited{
-    color: #EEE1B3;
-    text-decoration: none;
-  }
-  
-  
-  header a:hover {
-    color: #EEE1B3;
-    text-decoration: none;
-    transform: scale(1.05);
-    
-  }
-  header a:active{
-    color: #EEE1B3;
-    text-decoration: none;
-  }
-  .btn-contato2 button {
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    background-color: #EEE1B3;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: .2s;
-    text-decoration: none;
+
+  .a-header {
     color: #000;
-  }
-  
-  
-  /* @media only screen and (max-width: 700px){  
-    .logo{
-      width: 70px;
-      
-  }
-  header ul li {
-    
-    font-size: 15px;
-  }
-  }
-  
-  @media only screen and (max-width: 630px){  
-    .btn-contato2 button{
-      display: none;
+    text-decoration: none;
+    transition: .2s;
+    &:hover,
+    &:focus {
+      text-decoration: underline;
     }
   }
-  
-  @media only screen and (max-width: 500px){  
-    header > div {
-      
-      padding: 10px;
-    }
-  } */
-  
-  .nav-btn i{
-    color: #d9a30d;
-    font-size: 40px;
-  }
-  
-  header .nav-btn {
-    padding: 5px;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: none;
+  .a-header:hover {
     color: #000;
-      overflow: auto;
-    visibility: hidden;
-    opacity: 0;
-    font-size: 1.8rem;
-  }
-  
-  @media only screen and (max-width: 700px) {
-    header .nav-btn {
-      visibility: visible;
-      opacity: 1;
-          overflow: hidden;
-    }
-    .btn-contato2 button{
-      display: none;
-    }
-  
-    header nav{
-          overflow: hidden;
-      position: fixed;
-      top: -100vh;
-      right: 0;
-      height: 100%;
-      width: 200px;
-          z-index: 99999;
-      background: rgb(250,243,7);
-          background: linear-gradient(338deg, rgba(250,243,7,1) 0%, rgba(245,245,123,1) 35%, rgba(228,227,212,1) 100%);
-          transition: 1s;
-          gap: 3rem;
-          display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-       
-    }
-      header nav ul{
-          display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-          gap: 3rem;
-          
-      }
-      .cart__button {
-        font-size: 5.5rem;
-        color: #aa8605;
-      }
-      header ul li {
-        font-size: 25px;
-      }
-      header nav ul li a:hover{
-      color: #aa8605;
-    }
-      header nav ul li a {
-          color: #aa8605;
-      }
-  
-      header nav ul li a:active{
-          color: #aa8605;
-      }
-      
-      header nav ul li a:hover {
-          color: #aa8605;
-  
-      }
-      header nav ul li a:visited{
-        color: #aa8605;
-        text-decoration: none;
-      }
-  
-    header .responsive_nav {
-      transform: translateY(100vh);
-    }
-  
-    nav .nav-close-btn {
-      position: absolute;
-      top: 2rem;
-      right: 2rem;
-    }
-  
-    nav nav ul li{
-      font-size: 1.5rem;
-    }
-      
-  }
-  @media only screen and (min-width: 700px) and (max-width:1020px){
-    header .nav-btn {
-      visibility: visible;
-      opacity: 1;
-          overflow: hidden;
-    }
-    .btn-contato2 button{
-      display: none;
-    }
-  
-    header nav{
-          overflow: hidden;
-      position: fixed;
-      top: -100vh;
-      right: 0;
-      height: 100%;
-      width: 500px;
-          z-index: 99999;
-      background: rgb(250,243,7);
-          background: linear-gradient(338deg, rgba(250,243,7,1) 0%, rgba(245,245,123,1) 35%, rgba(228,227,212,1) 100%);
-          transition: 1s;
-          gap: 3rem;
-          display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-       
-    }
-      header nav ul{
-          display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-          gap: 3rem;
-          
-      }
-      .cart__button {
-        font-size: 5.5rem;
-        color: #aa8605;
-      }
-      header nav ul li:hover{
-      color: #aa8605;
-    }
-      header li a{
-          color: #aa8605;
-      }
-      header nav ul li a:visited{
-        color: #aa8605;
-        text-decoration: none;
-      }
-      
-      header nav ul li:hover {
-          
-        color: #aa8605;
-      }
-  
-    header .responsive_nav {
-      transform: translateY(100vh);
-    }
-  
-    nav .nav-close-btn {
-      position: absolute;
-      top: 2rem;
-      right: 2rem;
-    }
-  
-    nav ul li {
-      font-size: 3.5rem;
-    }
-      
+    text-decoration: none;
+    transform: scale(2);
   }
