--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,19 +8,24 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <!-- BOOTSTRAP ICONS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+     <script src="https://kit.fontawesome.com/b8ce1a1ffc.js" crossorigin="anonymous"></script>
 </head>
 <body>  
     <header>
         <nav>
-            <ul class="list"> 
-              <li><a class="a-header" href="/home"><img src="/assets/logo-padaria.png" alt="logo-padaria" width="100px" height="70px"></a></li>             
-              <li><a class="a-header" href="/home">Cardápio</a></li>
-              <li><a class="a-header" href="/carrinho">Carinho</a></li>
-              <li><a class="a-header" href="/conta">Conta</a></li>
-            </ul>
-            
-            <button class="menu">Menu</button>
-        </nav>
+            <div class="wrapper">
+              <div class="logo"><a href="/home"><img src="/assets/logo-padaria.png" width="100px" height="70px"></a></div>
+              <input type="radio" name="slider" id="menu-btn">
+              <input type="radio" name="slider" id="close-btn">
+              <ul class="nav-links">
+                <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/carrinho">Cart</a></li>
+                <li><a href="/perfil">Perfil</a></li>
+              </ul>
+              <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+            </div>
+          </nav>
         
     </header>
 
