--- a/public/estilo.css
+++ b/public/estilo.css
@@ -298,3 +298,67 @@ body {
   background-color: #242526;
   transform: scale(1.01);
 }
+
+/* footer */
+.flex{
+  display: flex;
+}
+footer {
+  padding: 40px 4%;
+  box-shadow: 0 0 40px 10px #ffffff1d;
+  background-color: #242526;
+}
+
+footer .flex {
+  justify-content: space-between;
+}
+
+footer .line-footer {
+  padding: 20px 0;
+}
+
+.borda {
+  border-top: 2px solid #EEE1B3;
+}
+
+footer .line-footer p i {
+  color: #EEE1B3;
+  font-size: 22px;
+}
+
+footer .line-footer p a {
+  color: #EEE1B3;
+}
+.logo-footer{
+  width: 150px;
+  position: relative;
+}
+.logo-footer img{
+  width: 100%;
+}
+
+.btn-social button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  background-color: #EEE1B3;
+  font-size: 15px;
+  cursor: pointer;
+  margin: 0 5px;
+  transition: .2s;
+  color: #000;
+}
+.bemvindo{
+  color: #EEE1B3;
+}
+#contato-footer{
+  display: none;
+}
+
+  @media only screen and (max-width: 640px){
+    .bemvindo {
+      display: none;
+  }
+  }
+ 
