--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -22,7 +22,7 @@
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 <li><a href="/home">Home</a></li>
                 <li><a href="/carrinho">Cart</a></li>
-                <li><a href="/perfil">Perfil</a></li>
+                <li><a href="/conta">Perfil</a></li>
               </ul>
               <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
             </div>
