--- a/views/pages/conta.ejs
+++ b/views/pages/conta.ejs
@@ -36,18 +36,18 @@
   
          <div className="container">
   
-            <form className="form-profile" action="/data" method="post" >
+            <form className="form-profile" >
                 <label className="label-avatar">
                   <span>
                     <FiUpload color="#FFF" size={25} />
                   </span>
               
                   <input type="file" accept="image/*" name="photoUrl" /> <br/>
-                  <% if (photoUrl === null) { %>
+                  
                     <img src="/assets/avatar" alt="Foto de perfil" width={250} height={250} />
-                  <% } else { %>
-                    <img src="<%= photoUrl %>" alt="Foto de perfil" width={250} height={250} />
-                  <% } %>
+                 
+                    <!-- <img src="<%= photoUrl %>" alt="Foto de perfil" width={250} height={250} /> -->
+               
               
                 </label>
               
