--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/logo-padaria.png" />
-    <title><%= produto.title %></title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="/estilo.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <!-- BOOTSTRAP ICONS -->
@@ -28,11 +28,6 @@
             </div>
           </nav>        
     </header>
-    <div class="products">
-        <img src="<%= produto.thumbnail %>">
-        <h1 ><%= produto.title %></h1>
-        <p >R$ <%= produto.price %></p>
-        <a href="/home">Voltar ao cardápio de produtos</a>
-    </div>
+   
 </body>
 </html>
