--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="/estilo.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <!-- BOOTSTRAP ICONS -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <script src="https://kit.fontawesome.com/b8ce1a1ffc.js" crossorigin="anonymous"></script>
 </head>
@@ -28,10 +32,45 @@
             </div>
           </nav>        
     </header>
-    <ul class="products">
+    <div class="container-fluid"> 
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+      
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="../../assets/img1.jpg" alt="Los Angeles" style="width:100%;">
+            </div>
+      
+            <div class="item">
+              <img src="../../assets/img2.jpg" alt="Chicago" style="width:100%;">
+            </div>
+          
+            <div class="item">
+              <img src="../../assets/img3.jpg" alt="New york" style="width:100%;">
+            </div>
+          </div>
+      
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
 
-        <li><a href="/products">Saiba mais!</a></li>
-        <!-- <% produtos.forEach(function(produto){ %> 
+   
+    <ul class="products">
+        <% produtos.forEach(function(produto){ %> 
 
                 <li class="<%= produto.id %>">
                     <img src="<%= produto.thumbnail %>">
@@ -40,11 +79,11 @@
                     <br>
 
                     
-                    <a href='/products/:<%= produto.id %>'>Saiba mais!</a> 
+                    <a href='/products/<%= produto.id %>'>Saiba mais!</a> 
                     
                 </li>
            
-        <% }); %> -->
+        <% }); %>
     </ul>
     <footer>
       <div>
