--- a/public/estilo.css
+++ b/public/estilo.css
@@ -112,7 +112,7 @@ body {
     z-index: 99;
     width: 100%;
     
-    background: #ffffff;
+    background: #262626;
   }
   nav .wrapper{
     position: relative;
@@ -126,7 +126,7 @@ body {
     justify-content: space-between;
   }
   .wrapper .logo a{
-    color: #2e2d2d;
+    color: #EEE1B3;
     font-size: 30px;
     font-weight: 600;
     text-decoration: none;
@@ -138,7 +138,7 @@ body {
     list-style: none;
   }
   .nav-links li a{
-    color: #2d2d2d;
+    color: #EEE1B3;
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
@@ -147,14 +147,14 @@ body {
     transition: all 0.3s ease;
   }
   .nav-links li a:hover{
-    background: #ffffe2;
+    background: #828236;
   }
   .nav-links .mobile-item{
     display: none;
   }
   .nav-links .drop-menu{
     position: absolute;
-    background: #ffffff;
+    background: #262626;
     width: 180px;
     line-height: 45px;
     top: 85px;
@@ -177,7 +177,7 @@ body {
     border-radius: 0px;
   }
   .wrapper .btn{
-    color: #262626;
+    color: #EEE1B3;
     font-size: 20px;
     cursor: pointer;
     display: none;
@@ -199,7 +199,7 @@ body {
       max-width: 350px;
       top: 0;
       left: -100%;
-      background: #ffffff;
+      background: #262626;
       display: block;
       padding: 50px 10px;
       line-height: 50px;
@@ -212,10 +212,10 @@ body {
       width: 10px;
     }
     ::-webkit-scrollbar-track {
-      background: #ffffff;
+      background: #737373;
     }
     ::-webkit-scrollbar-thumb {
-      background: #fff45b;
+      background: #ffea00;
     }
     #menu-btn:checked ~ .nav-links{
       left: 0%;
@@ -255,7 +255,7 @@ body {
     }
     .nav-links .mobile-item{
       display: block;
-      color: #2b2929;
+      color: #EEE1B3;
       font-size: 20px;
       font-weight: 500;
       padding-left: 20px;
@@ -264,7 +264,7 @@ body {
       transition: all 0.3s ease;
     }
     .nav-links .mobile-item:hover{
-      background: #ffffff;
+      background: #262626;
     }
   }
   nav input{
@@ -272,35 +272,51 @@ body {
   }
   
 /* cardápio */
+.container-products{
+  align-items: center;
+  justify-content: center;
+  display: flow;
+  transition: .35s;
+  cursor: pointer;
+}
 .products {
   padding: 120px 20px 50px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 50px;
   list-style: none;
 }
+
 .products li{
   background: rgb(255, 255, 255);
   text-align: center;
   padding: 30px;
-}
-.products li:hover{
   box-shadow:5px 5px 5px 5px  #bfc0c0;
+  border-radius: 30px;
+}
+.products li:hover > :not(:hover){
+
+  transform: scale(0.9);
+
 }
 .products li p{
   color: #000;
   font-weight: 700;
 }
+.products li .price{
+  color: #d8d80e;
+  font-weight: 700;
+}
 .products li a{
   color: #ffffff;
-  background-color: #3A3B3C;
+  background-color: #d34300;
   padding: 10px;
   border-radius: 20px;
   transition: .2s;
 }
 .products li a:hover{
   text-decoration: none;
-  background-color: #242526;
+  background-color: #bd0202;
   transform: scale(1.01);
 }
 
