--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -84,7 +84,7 @@
                         <br>
     
                         
-                        <a href=''>+ carrinho</a> 
+                        <a href='/adicionar/<%= produto.id %>'>+ carrinho</a> 
                         
                     </li>
                
