--- a/views/pages/conta.ejs
+++ b/views/pages/conta.ejs
@@ -44,18 +44,18 @@
               
                   <input type="file" accept="image/*" name="photoUrl" /> <br/>
                   
-                    <img src="/assets/avatar" alt="Foto de perfil" width={250} height={250} />
+                    <img src="/assets/avatar.png" alt="Foto de perfil" width={250} height={250} />
                  
-                    <!-- <img src="<%= photoUrl %>" alt="Foto de perfil" width={250} height={250} /> -->
+                   
                
               
                 </label>
               
                 <label>Nome</label>
-                <input type="text" name="name" value={nome}/>
+                <input type="text" name="name"/>
               
                 <label>Email</label>
-                <input type="text" name="email" value={email} disabled={true} />
+                <input type="text" name="email" disabled={true} />
                 
                 <button type="submit">Salvar</button>
               </form>
