--- a/views/pages/carrinho.ejs
+++ b/views/pages/carrinho.ejs
@@ -32,65 +32,24 @@
             </div>
           </nav>        
     </header>
-    <br>
-    <br>
-    <br>
-    <div class="container-sm"> 
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-      
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="../../assets/img1.jpg" alt="Los Angeles" style="width:100%;">
-            </div>
-      
-            <div class="item">
-              <img src="../../assets/img2.jpg" alt="Chicago" style="width:100%;">
-            </div>
-          
-            <div class="item">
-              <img src="../../assets/img3.jpg" alt="New york" style="width:100%;">
-            </div>
-          </div>
-      
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
+   
 
-    <section class="container-products">
-        <ul class="products">
-            <% produtos.forEach(function(produto){ %> 
-    
-                    <li class="<%= produto.id %>">
-                        <img src="<%= produto.thumbnail %>">
-                        <br>
-                        <br>
-                        <p><%= produto.title %></p>
-                        <p class="price">R$ <%= produto.price %></p>
-                        <br>
-    
-                        
-                        <a href='/add-to-cart/<%= produto.id %>'>+ carrinho</a> 
-                        
-                    </li>
-               
-            <% }); %>
+    <section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Carrinho de Compras</p>
+        <ul>
+          <% cartItems.forEach(function(produto){ %>
+            <li><%= produto.title%> </li>
+          <% }) %>
         </ul>
-    </section>
+        <p>Total: <%= total %> </p>
+        <a href="/home">Continuar Comprando</a>
+      </section>
+
+
    
     <footer>
       <div>
