--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -21,8 +21,8 @@
               <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/carrinho">Cart</a></li>
-                <li><a href="/conta">Perfil</a></li>
+                <li><a href="/carrinho"><i class="bi bi-cart-fill"></i></a></li>
+                <li><a href="/conta"><i class="bi bi-person-circle"></i></a></li>
               </ul>
               <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
             </div>
