--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -8,8 +8,13 @@
     <link rel="stylesheet" type="text/css" href="/estilo.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
      <!-- BOOTSTRAP ICONS -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <script src="https://kit.fontawesome.com/b8ce1a1ffc.js" crossorigin="anonymous"></script>
+     
 </head>
 <body>  
     <header>
@@ -28,47 +33,19 @@
             </div>
           </nav>        
     </header>
-    <div>
-
-        <div className="content">
-          <span className='title'>Minha Conta</span>
-  
-  
-         <div className="container">
-  
-            <form className="form-profile" >
-                <label className="label-avatar">
-                  <span>
-                    <FiUpload color="#FFF" size={25} />
-                  </span>
-              
-                  <input type="file" accept="image/*" name="photoUrl" /> <br/>
-                  
-                    <img src="/assets/avatar.png" alt="Foto de perfil" width={250} height={250} />
-                 
-                   
-               
-              
-                </label>
-              
-                <label>Nome</label>
-                <input type="text" name="name"/>
-              
-                <label>Email</label>
-                <input type="text" name="email" disabled={true} />
-                
-                <button type="submit">Salvar</button>
-              </form>
-  
-         </div>
-  
-         <div className="container">
-           <button className="logout-btn">Sair da Conta</button>
-         </div>
-  
+    <br>
+    <br>
+    <br>
+      <section class="cart <%= isCartVisible ? 'cart--active' : '' %>">
+        <div class="cart-items">
+          <% cartItems.forEach(function(cartItem) { %>
+            <%- include('cartItem', { data: cartItem }) %>
+          <% }); %>
         </div>
-  
-      </div>
+      
+        <div class="cart-resume"><%= formatCurrency(totalPrice, 'BRL') %></div>
+      </section>
+   
     <footer>
       <div>
           <div>
