--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -14,6 +14,8 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <script src="https://kit.fontawesome.com/b8ce1a1ffc.js" crossorigin="anonymous"></script>
+     
+     
 </head>
 <body>  
     <header>
@@ -25,8 +27,8 @@
               <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/carrinho">Cart</a></li>
-                <li><a href="/conta">Perfil</a></li>
+                <li><a href="/cart"><i class="bi bi-cart-fill"></i></a></li>
+                <li><a href="/conta"><i class="bi bi-person-circle"></i></a></li>
               </ul>
               <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
             </div>
@@ -76,16 +78,16 @@
             <% produtos.forEach(function(produto){ %> 
     
                     <li class="<%= produto.id %>">
+                      <button type="button" class="button__add-cart" data-id="<%= produto.id %>" onclick="addToCart('<%= produto.id %>')">
+                        <i class="bi bi-cart-plus-fill"></i>
+                      </button>
+                      
                         <img src="<%= produto.thumbnail %>">
                         <br>
                         <br>
                         <p><%= produto.title %></p>
                         <p class="price">R$ <%= produto.price %></p>
-                        <br>
-    
-                        
-                        <a href='/add-to-cart/<%= produto.id %>'>+ carrinho</a> 
-                        
+                        <br>                        
                     </li>
                
             <% }); %>
@@ -118,6 +120,21 @@
           </div>
       </div>
   </footer>  
-    
+   
+  <script>
+    function addToCart(productId) {
+      const xhr = new XMLHttpRequest();
+      xhr.open('POST', '/add-to-cart');
+      xhr.setRequestHeader('Content-Type', 'application/json');
+      xhr.onload = function() {
+        if (xhr.status === 200) {
+          window.location.href = '/cart';
+        } else {
+          alert('Error adding product to cart');
+        }
+      };
+      xhr.send(JSON.stringify({ productId }));
+    }
+  </script>
 </body>
 </html>
