--- a/views/pages/conta.ejs
+++ b/views/pages/conta.ejs
@@ -28,42 +28,41 @@
             </div>
           </nav>        
     </header>
+    <br>
+    <br>
+    <br> <br>
+    <br>
     <div>
 
-        <div className="content">
-          <span className='title'>Minha Conta</span>
+        <div class="content">
+          <span class='title'>Minha Conta</span>
   
   
-         <div className="container">
+         <div class="container">
   
-            <form className="form-profile" >
-                <label className="label-avatar">
-                  <span>
-                    <FiUpload color="#FFF" size={25} />
-                  </span>
-              
-                  <input type="file" accept="image/*" name="photoUrl" /> <br/>
-                  
-                    <img src="/assets/avatar.png" alt="Foto de perfil" width={250} height={250} />
+            <form class="form-profile" >
+                <label class="label-avatar">
                  
-                   
-               
               
+                  <input type="file" accept="image/*" name="photoUrl" /> 
+                  
+                  <img src="/assets/avatar.png" alt="Foto de perfil" width={250} height={250} />            
+  
                 </label>
               
                 <label>Nome</label>
                 <input type="text" name="name"/>
               
                 <label>Email</label>
-                <input type="text" name="email" disabled={true} />
+                <input type="text" name="email" disabled={true} /> <br/>
                 
-                <button type="submit">Salvar</button>
+                <button type="submit">Salvar</button> <br/>
               </form>
   
          </div>
   
-         <div className="container">
-           <button className="logout-btn">Sair da Conta</button>
+         <div class="container">
+           <button class="logout-btn">Sair da Conta</button>
          </div>
   
         </div>
