--- a/public/estilo.css
+++ b/public/estilo.css
@@ -323,7 +323,7 @@ body {
 .button__add-cart {
   width: 45px;
   height: 45px;
-  margin: 0px 0px 0px 200px;
+  margin: 10px;
   color: #0c5dd6;
   display: flex;
   align-items: center;
@@ -400,4 +400,224 @@ footer .line-footer p a {
 
 
 
-/* carrossel */
+/* carrinho */
+.cart {
+     background-color: #fff; 
+    padding: 20px;
+    border-radius: 5px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /
+ 
+}
+
+.cart-item {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.cart-item-image {
+  width: 70px;
+}
+
+.cart-item-title {
+  font-size: 15px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 8px;
+}
+
+.cart-item-price {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.cart-item-content {
+  padding: 0 35px 0 10px;
+}
+.cart-resume {
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding: 35px 0 15px;
+  border-top: 1px solid #ddd;
+}
+
+.button__remove-item {
+  position: absolute;
+  top: 0;
+  right: 300px;
+  color: #d83232;
+  font-size: 2.4rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.button__add-cart2 {
+  color: #0c5dd6;
+  position: absolute;
+  top: 40px;
+  right: 300px;
+  font-size: 2.4rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.cart-button{
+  padding: 15px;
+  border:0;
+  border-radius: 20px;
+  background-color: #e9e9b8;
+  color: #000;
+  font-size: 1.3rem;
+  transition: .2s;
+}
+
+.cart-button:hover{
+  text-decoration: none;
+  background-color: #59552e;
+  color: #fefefe;
+  transform: scale(1.01);
+}
+.cart-flex{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.cart-button-finalizar{
+  padding: 15px;
+  border:0;
+  border-radius: 20px;
+  background-color: #b9e9b8;
+  color: #000;
+  font-size: 1.3rem;
+  transition: .2s;
+}
+
+.cart-button-finalizar:hover{
+  text-decoration: none;
+  background-color: #33592e;
+  color: #fefefe;
+  transform: scale(1.01);
+}
+
+@media only screen and (max-width: 600px) {
+  .button__remove-item {
+    top: 0;
+    right: 0px;
+   
+  }
+  .button__add-cart2 {
+    
+    top: 40px;
+    right: 0px;
+    
+}
+}
+
+/* conta */
+.container{
+  display: flex;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  padding: 0.8em;
+  align-items: center;
+  margin-bottom: 1em;
+}
+.title{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0;
+  border-radius: 5px;
+  background-color: #f8f8f8;
+  padding: 0.8em;
+  font-weight: 600;
+}
+
+.title span{
+  margin-left: 0.8em;
+  font-size: 1.5em;
+}
+
+.label-avatar{
+  width: 400px;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.label-avatar input{
+  display: none;
+}
+
+.label-avatar span{
+  z-index: 10;
+  position: absolute;
+  opacity: 0.7;
+  transition: all 0.5s;
+}
+
+.label-avatar span:hover{
+  opacity: 1;
+  transform: scale(1.4);
+}
+
+.form-profile img{
+  margin-bottom: 1em;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.form-profile label{
+  margin-bottom: 0.5em;
+  font-size: 1.4em;
+}
+
+.form-profile input, textarea, select{
+  margin-bottom: 1em;
+  padding: 0.7em;
+  border:0;
+  border-radius: 5px;
+  max-width: 600px;
+}
+
+.form-profile input:disabled{
+  cursor: not-allowed;
+}
+
+.form-profile button{
+  max-width: 600px;
+}
+
+.logout-btn{
+  padding: 8px 20px;
+  background-color: #5e0606;
+  border: 0;
+  border-radius: 30px;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+}
+.logout-btn:hover{
+  background-color: #a00909;
+}
+
+@media only screen and (max-width: 480px) {
+  .label-avatar input{
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .label-avatar input{
+    font-size: 10px;
+  }
+}
