--- a/views/pages/carrinho.ejs
+++ b/views/pages/carrinho.ejs
@@ -15,6 +15,7 @@
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <script src="https://kit.fontawesome.com/b8ce1a1ffc.js" crossorigin="anonymous"></script>
      
+     
 </head>
 <body>  
     <header>
@@ -26,7 +27,7 @@
               <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/cart"><i class="bi bi-cart-fill"></i></a></li>
+                <li><a href="/carrinho"><i class="bi bi-cart-fill"></i></a></li>
                 <li><a href="/conta"><i class="bi bi-person-circle"></i></a></li>
               </ul>
               <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
@@ -36,19 +37,35 @@
     <br>
     <br>
     <br>
-    <section class="cart-item">
-        <img src="<%= thumbnail %>" alt="imagem do produto" class="cart-item-image" />
-        
-        <div class="cart-item-content">
-          <h3 class="cart-item-title"><%= title %></h3>
-          <h3 class="cart-item-price"><%= formatCurrency(price, 'BRL') %></h3>
-        
-          <button type="button" class="button__remove-item" data-id="<%= id %>">
-            <i class="bi bi-cart-dash-fill"></i>
-          </button>
+    <section>
+        <div class="cart">
+            <h1>Carrinho de Compras</h1>
+            <ul>
+            <% carrinho.forEach((produto) => { %>
+                <li class="cart-item">
+                    <img class="cart-item-image" src="<%= produto.image %>"  width="100px" height="100px"/>
+                    <div class="cart-item-content">
+                        <h3 class="cart-item-title"> <%= produto.name %></h3>        
+                        <h3 class="cart-item-price">R$ <%= produto.price %></h3>
+                
+                        <a href="/remover/<%= produto.id%>"
+                          class="button__remove-item"
+                        > <i class="bi bi-cart-dash-fill"></i>       
+                        </a>
+                                
+                      </div>
+                </li>
+            <% }); %>
+            </ul>
+            <p class="cart-resume">Total: <%= total %></p>
+            <div class="cart-flex">
+                <a href="/home" class="cart-button">Continuar Comprando</a>
+                <a href="" class="cart-button-finalizar">Finalizar Compra</a>
+            </div>
+            
         </div>
-      </section>
-   
+        
+    </section>   
     <footer>
       <div>
           <div>
@@ -75,6 +92,7 @@
           </div>
       </div>
   </footer>  
-    
+   
+ 
 </body>
 </html>
