--- a/public/estilo.css
+++ b/public/estilo.css
@@ -110,8 +110,7 @@ body {
   nav{
     position: fixed;
     z-index: 99;
-    width: 100%;
-    
+    width: 100%;    
     background: #262626;
   }
   nav .wrapper{
@@ -270,6 +269,57 @@ body {
   nav input{
     display: none;
   }
+
+/* tema site */
+body.dark {
+  background: #252525;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.label-theme {
+  background-color: #111;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+  transform: scale(1.5);
+
+}
+
+
+.label-theme .ball {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label-theme .ball {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  color: #f1c40f;
+}
+
+.fa-sun {
+  color: #f39c12;
+}
   
 /* cardápio */
 .container-products{
@@ -609,6 +659,8 @@ footer .line-footer p a {
 }
 .logout-btn:hover{
   background-color: #a00909;
+  text-decoration: none;
+  color: #fff;
 }
 
 @media only screen and (max-width: 480px) {
