--- a/views/pages/carrinho.ejs
+++ b/views/pages/carrinho.ejs
@@ -57,7 +57,7 @@
                 </li>
             <% }); %>
             </ul>
-            <p class="cart-resume">Total: <%= total %></p>
+            <p class="cart-resume">Total: R$ <%= total %></p>
             <div class="cart-flex">
                 <a href="/home" class="cart-button">Continuar Comprando</a>
                 <a href="/finalizar" class="cart-button-finalizar">Finalizar Compra</a>
