--- a/views/pages/carrinho.ejs
+++ b/views/pages/carrinho.ejs
@@ -60,7 +60,9 @@
             <p class="cart-resume">Total: R$ <%= total %></p>
             <div class="cart-flex">
                 <a href="/home" class="cart-button">Continuar Comprando</a>
-                <a href="/finalizar" class="cart-button-finalizar">Finalizar Compra</a>
+                <% if(carrinho.length > 0){ %>
+                    <a href="/finalizar" class="cart-button-finalizar">Finalizar Compra</a>
+                <% } %>
             </div>
             
         </div>
